--- a/index.html
+++ b/index.html
@@ -55,7 +55,16 @@
 
     <script>
         // JavaScript code goes here   
-        
+        let guess_num = MATH.random();
+        const user_num = document.getElementById('guess-input')
+        let i = 0;
+        for(i < 0; i++);{
+            if (user_num = guess_input){
+                console.log("You win");
+                break;
+            }
+        }
+
 
         // TODO: Add a click listener to the button (will be covered more in zyBook 7.4)
         // Example: document.getElementById('guess-button').addEventListener('click', function() { ... });
